# MLCXC

./: .gitignore  CMakeLists.txt  README.MD  main.py
.cache/clangd/index/: activation.h.883E76502E74C111.idx  add.h.9FAFC48925817A1A.idx  alibi_add.h.B162D66DBFDCEE30.idx  allocator.h.48A4344320E06B6F.idx  batch_reader.h.15FAC9DF4B103516.idx  bfloat16.h.DA33BF9066E754B0.idx  bias_add.h.E02E6A7D3D118AA4.idx  common.h.D0C0E2AC33C0810A.idx  concat.h.D278753BCD8D3063.idx  conv1d.h.4D1458B52BB1A2A4.idx  cos.h.9B0EE1DC631861F4.idx  decoder.h.B6224B10A8AD31E7.idx  decoding.h.8AE39E5E1BA7DD0C.idx  decoding_utils.h.71F1E48D32C2C64D.idx  dequantize.h.E816E9754FD4F01A.idx  devices.h.6188946A6439FC7E.idx  encoder.h.6D5A0F5B04628A32.idx  file_manager.cpp.6B22F1761400D2AF.idx  file_manager.hpp.29FE5D07CB50E078.idx  filesystem.h.1683FAF5CD1F6CAD.idx  flash_attention.h.B4774D5BFDA046D8.idx  gather.h.E0AD441122DFF69A.idx  gelu.h.9C3D4332BFEE1112.idx  gemm.h.58E43E888C8F28DE.idx  generation.h.0FEC617E05963341.idx  gumbel_max.h.FCCC0CD50CAE6415.idx  (+61 more)
include/fileManager/: file_manager.hpp
include/processCaller/: process_caller.hpp  process_caller_factory.hpp  process_caller_lin.hpp  process_caller_win.hpp
include/tokenManager/: token_manager.hpp
include/translator/: translator.hpp
include/utils/: status.hpp  string_util.hpp
src/: main.cpp
src/fileManager/: file_manager.cpp
src/processCaller/: process_caller.cpp  process_caller_factory.cpp  process_caller_win.cpp
src/tokenManager/: token_manager.cpp
src/translator/: translator.cpp
temp_src/: main.cpp
(+4 files in other folders)
